--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,5 +25,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
         <item name="android:windowTranslucentStatus">true</item>
 
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 </resources>
