--- a/app/src/main/res/layout/rv_product.xml
+++ b/app/src/main/res/layout/rv_product.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_marginHorizontal="5dp"
-    android:layout_marginTop="15dp"
+    android:layout_marginVertical="7dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
-    app:cardElevation="20dp">
+    android:background="@color/white"
+    android:backgroundTint="@color/white"
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="5dp"
@@ -17,25 +19,26 @@
 
         <ImageView
             android:id="@+id/imgProduct"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@mipmap/cake"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/productImage" />
 
         <!-- Weight -->
         <TextView
             android:id="@+id/textWeight"
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/roundedwight"
             android:padding="3dp"
-            android:text="10KG"
+            android:text="@string/_10kg"
             android:textAlignment="center"
             android:textColor="#686767"
-            android:textSize="12sp"
+            android:textSize="11sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/imgProduct"
             app:layout_constraintTop_toTopOf="@+id/imgProduct" />
@@ -46,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
-            android:text="Cupcake"
+            android:text="@string/cupcake"
             android:textAlignment="center"
             android:textColor="#686767"
             android:textSize="12sp"
@@ -62,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
-            android:text="LKR 100"
+            android:text="@string/lkr_100"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp"
@@ -73,23 +76,18 @@
 
         <TextView
             android:id="@+id/textDiscount"
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:background="@drawable/roundedwight"
             android:backgroundTint="@android:color/holo_red_light"
             android:padding="3dp"
-            android:text="10%"
+            android:text="@string/_10"
             android:textAlignment="center"
             android:textColor="#670303"
-            android:textSize="13sp"
+            android:textSize="11sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imgProduct"
             app:layout_constraintTop_toBottomOf="@+id/textName" />
-
-
-
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
