--- a/app/src/main/res/layout/activity_view_product.xml
+++ b/app/src/main/res/layout/activity_view_product.xml
@@ -15,6 +15,15 @@
         android:orientation="horizontal"
         android:background="@color/primary">
 
+        <ImageButton
+            android:layout_gravity="center"
+            android:id="@+id/btnBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/menu"
+            android:src="@drawable/ic_back" />
+
         <EditText
             android:layout_weight="1"
             android:backgroundTint="@color/white"
