--- a/app/src/main/res/layout/rv_category.xml
+++ b/app/src/main/res/layout/rv_category.xml
@@ -5,7 +5,7 @@
     android:layout_marginHorizontal="15dp"
     android:layout_marginTop="15dp"
     android:layout_width="wrap_content"
-    android:layout_height="87dp">
+    android:layout_height="wrap_content">
 
     <ImageButton
         android:id="@+id/btn"
@@ -20,10 +20,10 @@
 
     <ImageView
         android:id="@+id/btnIcon"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/ic_cart"
+        android:background="@drawable/ic_cake_"
         android:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="@+id/btn"
         app:layout_constraintEnd_toEndOf="@+id/btn"
@@ -31,15 +31,18 @@
         app:layout_constraintTop_toTopOf="@+id/btn" />
 
     <TextView
+        android:layout_marginTop="5dp"
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/btn"
         android:layout_centerHorizontal="true"
         android:text="Special"
+        android:textAlignment="center"
         android:textColor="#636262"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/btnIcon"
+        app:layout_constraintStart_toStartOf="@+id/btnIcon"
+        app:layout_constraintTop_toBottomOf="@+id/btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
