--- a/app/src/main/res/layout/text_model.xml
+++ b/app/src/main/res/layout/text_model.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:padding="20sp"
+    android:paddingHorizontal="10dp"
+    android:paddingTop="10sp"
+    android:paddingBottom="5sp"
     android:background="@color/white"
     android:layout_height="wrap_content">
 
@@ -34,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
-            android:layout_marginHorizontal="15dp"
+            android:layout_marginStart="15dp"
             android:text="Apply"/>
     </LinearLayout>
 
