--- a/app/src/main/res/layout/rv_category.xml
+++ b/app/src/main/res/layout/rv_category.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_marginHorizontal="15dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="5dp"
     android:layout_marginTop="15dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
