--- a/app/src/main/res/layout/rv_product.xml
+++ b/app/src/main/res/layout/rv_product.xml
@@ -9,6 +9,7 @@
     app:cardCornerRadius="10dp"
     android:background="@color/white"
     android:backgroundTint="@color/white"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +21,9 @@
         <ImageView
             android:id="@+id/imgProduct"
             android:layout_width="100dp"
+            android:minHeight="100dp"
             android:layout_height="100dp"
+            android:scaleType="fitXY"
             android:src="@mipmap/c1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +33,7 @@
         <!-- Name -->
         <TextView
             android:id="@+id/textName"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:padding="3dp"
             android:text="@string/cupcake"
@@ -54,8 +57,7 @@
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textName"
-            app:layout_constraintStart_toStartOf="@+id/textName"
+            app:layout_constraintStart_toStartOf="@+id/imgProduct"
             app:layout_constraintTop_toBottomOf="@+id/textName" />
 
         <TextView
