--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,91 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".tabs.Order">
 
-    <ImageView
-        android:id="@+id/btnPic"
-        android:layout_marginTop="40dp"
-        android:layout_gravity="center"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:scaleType="fitXY"
-        android:background="@drawable/shadow"
         android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:contentDescription="@string/profile_picture"
-      />
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/menu"
+        android:src="@drawable/ic_back"
+        app:tint="@color/primary"
+        />
 
-    <TextView
-        android:id="@+id/textName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_marginBottom="15dp"
+    <ImageView
+        android:id="@+id/ivProductPic"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_gravity="center"
-        android:text="Rizni Mohamed"
-        android:textAlignment="center"
-        android:textColor="#494848"
-        android:textSize="17sp"
-        android:textStyle="bold" />
-
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/shadowbox"
+        android:clickable="true"
+        android:contentDescription="@string/profile_picture"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="15dp"
+        android:layout_weight="1"
         android:background="@drawable/toprounded"
         android:backgroundTint="@color/primary"
         android:orientation="vertical"
-        android:layout_weight="1"
+        android:paddingHorizontal="15dp"
         android:paddingTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textName">
 
         <androidx.cardview.widget.CardView
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:cardCornerRadius="5dp">
 
-            <TextView
-
-                android:id="@+id/btnName"
+            <EditText
+                android:id="@+id/txtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:autofillHints="name"
                 android:background="@color/white"
-                android:text="Name"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:cardCornerRadius="5dp">
-
-            <TextView
-                android:id="@+id/btnContact"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:hint="Name"
+                android:inputType="text"
                 android:padding="10dp"
-                android:text="Contact"
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -103,13 +78,15 @@
             android:layout_marginTop="10dp"
             app:cardCornerRadius="5dp">
 
-            <TextView
-                android:id="@+id/btnAddress"
+            <EditText
+                android:id="@+id/txtCream"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints="name"
                 android:background="@color/white"
+                android:hint="Cream"
+                android:inputType="text"
                 android:padding="10dp"
-                android:text="Address"
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -124,13 +101,15 @@
             android:layout_marginTop="10dp"
             app:cardCornerRadius="5dp">
 
-            <TextView
-                android:id="@+id/btnPassword"
+            <EditText
+                android:id="@+id/txtFlavour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints="name"
                 android:background="@color/white"
+                android:hint="Flavour"
+                android:inputType="text"
                 android:padding="10dp"
-                android:text="Password"
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -139,7 +118,78 @@
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="5dp">
 
+            <EditText
+                android:id="@+id/txtUnitPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="phone"
+                android:background="@color/white"
+                android:hint="Unit Price"
+                android:inputType="numberDecimal"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="38dp"
+                tools:layout_editor_absoluteY="320dp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="5dp">
+
+            <EditText
+                android:id="@+id/txtDiscountPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="phone"
+                android:background="@color/white"
+                android:hint="Discount Price"
+                android:inputType="numberDecimal"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="38dp"
+                tools:layout_editor_absoluteY="320dp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="5dp">
+
+            <EditText
+                android:id="@+id/txtQuantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="name"
+                android:background="@color/white"
+                android:hint="Quantity"
+                android:inputType="number"
+                android:padding="10dp"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="38dp"
+                tools:layout_editor_absoluteY="320dp" />
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -149,20 +199,20 @@
             app:cardCornerRadius="5dp">
 
             <TextView
-                android:id="@+id/btnLogout"
+                android:id="@+id/btnAddCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@color/secondary"
                 android:padding="10dp"
-                android:text="Logout"
-                android:textColor="@color/black"
+                android:text="Add to cart"
+                android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 tools:layout_editor_absoluteX="38dp"
                 tools:layout_editor_absoluteY="320dp" />
 
         </androidx.cardview.widget.CardView>
-
 
     </LinearLayout>
 
