--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -58,6 +58,7 @@
                     tools:layout_editor_absoluteY="29dp" />
 
                 <TextView
+                    android:id="@+id/txtTotal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1000"
@@ -71,7 +72,7 @@
 
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnOrder"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_gravity="center
