--- a/app/src/main/res/layout/rv_list.xml
+++ b/app/src/main/res/layout/rv_list.xml
@@ -51,6 +51,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textName" />
 
         <RelativeLayout
+            android:visibility="gone"
             android:id="@+id/RLBtnRemove"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -72,8 +73,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
                 android:background="@drawable/ic_remove"
                 android:backgroundTint="@color/primary"
                 android:contentDescription="@string/button_remove" />
