--- a/app/src/main/res/layout/rv_cart.xml
+++ b/app/src/main/res/layout/rv_cart.xml
@@ -51,8 +51,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textName" />
 
         <RelativeLayout
-            android:visibility="gone"
-            android:id="@+id/RLBtnRemove"
+            android:id="@+id/rlDelete"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="12dp"
