--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -23,6 +23,7 @@
         />
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/ivProductPic"
         android:layout_width="250dp"
         android:layout_height="250dp"
@@ -35,186 +36,197 @@
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:background="@drawable/toprounded"
         android:backgroundTint="@color/primary"
-        android:orientation="vertical"
         android:paddingHorizontal="15dp"
-        android:paddingTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textName">
+        android:paddingTop="15dp">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:cardCornerRadius="5dp">
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/txtName"
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="name"
-                android:background="@color/white"
-                android:hint="Name"
-                android:inputType="text"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/txtName"
+                    android:textColorHint="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="name"
+                    android:background="@color/white"
+                    android:hint="Name"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:cardCornerRadius="5dp">
+            </androidx.cardview.widget.CardView>
 
-            <EditText
-                android:id="@+id/txtCream"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="name"
-                android:background="@color/white"
-                android:hint="Cream"
-                android:inputType="text"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/txtCream"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="name"
+                    android:background="@color/white"
+                    android:hint="Cream"
+                    android:inputType="text"
+                    android:textColorHint="@color/black"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:cardCornerRadius="5dp">
+            </androidx.cardview.widget.CardView>
 
-            <EditText
-                android:id="@+id/txtFlavour"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="name"
-                android:background="@color/white"
-                android:hint="Flavour"
-                android:inputType="text"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/txtFlavour"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="name"
+                    android:background="@color/white"
+                    android:hint="Flavour"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textColorHint="@color/black"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:elevation="10dp"
-            app:cardCornerRadius="5dp">
+            </androidx.cardview.widget.CardView>
 
-            <EditText
-                android:id="@+id/txtUnitPrice"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="phone"
-                android:background="@color/white"
-                android:hint="Unit Price"
-                android:inputType="numberDecimal"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/txtUnitPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="phone"
+                    android:background="@color/white"
+                    android:hint="Unit Price"
+                    android:inputType="numberDecimal"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:elevation="10dp"
-            app:cardCornerRadius="5dp">
+            </androidx.cardview.widget.CardView>
 
-            <EditText
-                android:id="@+id/txtDiscountPrice"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="phone"
-                android:background="@color/white"
-                android:hint="Discount Price"
-                android:inputType="numberDecimal"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/txtDiscountPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="phone"
+                    android:background="@color/white"
+                    android:hint="Discount Price"
+                    android:inputType="numberDecimal"
+                    android:textColorHint="@color/black"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:elevation="10dp"
-            app:cardCornerRadius="5dp">
+            </androidx.cardview.widget.CardView>
 
-            <EditText
-                android:id="@+id/txtQuantity"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="name"
-                android:background="@color/white"
-                android:hint="Quantity"
-                android:inputType="number"
-                android:padding="10dp"
-                android:textColorHint="@color/black"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/txtQuantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="name"
+                    android:background="@color/white"
+                    android:hint="Quantity"
+                    android:inputType="number"
+                    android:padding="10dp"
+                    android:textColorHint="@color/black"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:elevation="10dp"
-            app:cardCornerRadius="5dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/btnAddCart"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/secondary"
-                android:padding="10dp"
-                android:text="Add to cart"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="320dp" />
+                android:layout_marginTop="10dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="5dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/secondary"
+                    android:padding="10dp"
+                    android:text="Add to cart"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
 
-    </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 
 </LinearLayout>
