--- a/app/src/main/res/layout/delete_model.xml
+++ b/app/src/main/res/layout/delete_model.xml
@@ -8,49 +8,35 @@
     android:background="@color/white"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/txt"
-        android:layout_width="match_parent"
+    <TextView
+        android:paddingEnd="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/primary"
         android:textSize="18sp"
-        android:textColorHint="#5A5959"
         android:textColor="@color/black"
-        android:inputType="text"
-        android:hint="Type here"
-        android:autofillHints="name"/>
-
-    <EditText
-        android:visibility="gone"
-        android:id="@+id/txtNum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/primary"
-        android:textSize="18sp"
-        android:textColorHint="#5A5959"
-        android:textColor="@color/black"
-        android:inputType="number"
-        android:hint="Type here"
-        android:autofillHints="creditCardExpirationDay"/>
+        android:paddingVertical="5dp"
+        android:text="@string/delete_message"/>
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/btnCancel"
+            android:id="@+id/btnNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
-            android:text="Cancel"/>
+            android:text="No"/>
         <Button
-            android:id="@+id/btnApply"
+            android:id="@+id/btnYes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
+            android:backgroundTint="@android:color/holo_red_light"
             android:layout_marginStart="15dp"
-            android:text="Apply"/>
+            android:text="Yes"/>
     </LinearLayout>
 
 </LinearLayout>
