--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="dialogCornerRadius">15dp</item>
     </style>
 
     <style name="Theme.SprinklesBakery.NoActionBar">
@@ -27,4 +28,6 @@
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
 
     </style>
+
+
 </resources>
